初期画面(未完成）の追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="title_activity_course_list_view">CourseListViewActivity</string>
     <string name="title_activity_course">CourseActivity</string>
     <string name="title_activity_cource">Map</string>
+    <string name="title_activity_first">FirstActivity</string>
+    <string name="str_title_comment">出発地</string>
 
 </resources>
